Implemented method for converting binary number to decimal number.

--- a/BaseConversion/BaseConversion.vcxproj
+++ b/BaseConversion/BaseConversion.vcxproj
@@ -141,6 +141,7 @@
   <ItemGroup>
     <ClCompile Include="BaseConversion.cpp" />
     <ClCompile Include="BaseChange.cpp" />
+    <ClCompile Include="BinaryToDecimal.cpp" />
     <ClCompile Include="BinaryToOctal.cpp" />
     <ClCompile Include="Exponent.cpp" />
   </ItemGroup>
