--- a/BaseConversion/BaseConversion.vcxproj.filters
+++ b/BaseConversion/BaseConversion.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="DecimalToBCD.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="DecimalFractionToBinary.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="conversionf.h">
