--- a/BaseConversion/BaseConversion.vcxproj.filters
+++ b/BaseConversion/BaseConversion.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="DecimalFractionToBinary.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="DecimalToBinary.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="conversionf.h">
